truncated titles fix

--- a/src/widget/css/general.css
+++ b/src/widget/css/general.css
@@ -378,6 +378,11 @@ a[href^="https://maps.google.com/maps"]{display:none !important}
     color: #121212 !important;
     font-size: 1.1em;
     font-weight: 500;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 
 .list-item {
@@ -410,11 +415,16 @@ a[href^="https://maps.google.com/maps"]{display:none !important}
 }
 
 .list-item .list-title {
-    display: inline-block;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
     padding: 15px 15px 10px;
     font-weight: 600;
     font-size: 17px;
     margin-right: 60px;
+    max-height: 30%;
 }
 
 .list-item .list-description {
